# automacao-python

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/functionalities/: login.py
app/utils/: settings.py
